Updating expenses and meetings (BCY)

--- a/expenses.html
+++ b/expenses.html
@@ -310,10 +310,32 @@
                         <td>$25.73</td>
                         <td>Shipping and tax included.</td>
                     </tr>
+					<tr>
+                        <th>23</th>
+                        <td>Teensy 4.0 controller</td>
+                        <td></td>
+                        <td>2023-September-16</td>
+                        <td>Amazon</td>
+                        <td>1</td>
+                        <td>$23.79</td>
+                        <td>$25.73</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
+					<tr>
+                        <th>24</th>
+                        <td>PLA Filament 2.85mm black</td>
+                        <td>B08QMM8T2S</td>
+                        <td>2023-October-10</td>
+                        <td>Amazon</td>
+                        <td>2</td>
+                        <td>$16.79</td>
+                        <td>$36.02</td>
+                        <td>Shipping and tax included.</td>
+                    </tr>
                 </tbody>
                 <tr>
                     <th colspan="7" class="text-right">Total:</th>
-                    <td colspan="2">$461.21</td>
+                    <td colspan="2">$522.96</td>
                 </tr>
             </table>
             <p><br/></p>
