--- a/meeting.html
+++ b/meeting.html
@@ -60,6 +60,9 @@
 						<li>1 3/4" (44.45mm) of pool cover was printed - will need to have a seam as to not waste printed material (and thus money).</li>
 					</ul>
 				</li>
+				<li>Cut out the remaining part of the pool cover and created gcode to print.</li>
+				<li>Began print of the remaining part of the pool cover.</li>
+				<li>Continuing to read analog input through the Teensy.</li>
 			</ul>
 			
 			2023-October-5
@@ -74,13 +77,14 @@
 							</ul>
 						</li>
 						<li>[] Reduce pin by 0.2mm.</li>
+						<li>[] Cut out holes for screws to speaker.</li>
 					</ul>
 				</li>
 			</ul>
 			
 			2023-October-3
 			<ul>
-				<li>Class presentations</li>
+				<li>Other group presentations</li>
 				<li>Began 3D test print of connections and speaker hole.</li>
 			</ul>
 			
@@ -99,49 +103,76 @@
 						<li>Cut out a space from the top of the pool cover down to position of LED wires and make it 15mm wide.</li>
 					</ul>
 				</li>
+				<li>Organized wires onto breadboard.</li>
 			</ul>
 			
 			2023-September-26
 			<ul>
-
+				<li>Test printed a small version of the dovetail joint to make sure the gap between them is sufficient.
+					<ul>
+						<li>Need to take into account the orientation of the print for strength. The wrong direction will cause shearing.</li>
+					</ul>
+				</li>
 			</ul>
 			
 			2023-September-21
 			<ul>
-
+				<li>3D printing designing.</li>
+				<li>Attempted to do a 3D print of the sample dovetail join.
+					<ul>
+						<li>Was using an SD card, so thought that was the issue.</li>
+						<li>The memory card, in truth, used for the print was too large (64GB).</li>
+					</ul>
+				</li>
 			</ul>
 			
 			2023-September-19
 			<ul>
-
+				<li>3D printing designing.
+					<ul>
+						<li>Due to Blender being difficult, switched to Tinkercad.</li>
+						<li>Began looking for gcode sliders/generators.</li>
+						<li>Completed base stand for the pool.</li>
+						<li>Completed a sample dovetail joint.</li>
+					</ul>
+				</li>
 			</ul>
 			
 			2023-September-14
 			<ul>
 				<li>Connected PWM to the PCB driver.</li>
+				<li>3D printing designing.</li>
 			</ul>
 			
 			2023-September-12
 			<ul>
-				<li>Began 3D designs</li>
+				<li>Began 3D designs on Blender.</li>
+				<li>Began looking into other kinds of microcontroller to use instead of the Arduino UNO.</li>
 			</ul>
 			
 			2023-September-7
 			<ul>
-
+				<li>Presentation during class
+					<ul>
+						<li>Arduino may not be strong enough to do real-time FFTs as it does not have floating point built in.</li>
+					</ul>
+				</li>
+				<li>Glued the pool area together.</li>
+				<li>After glue is dried, another water test. No leakage at this time.</li>
 			</ul>
 			
 			2023-September-5
 			<ul>
+				<li>Other group presentations</li>
 				<li>Cut out the final tray - put a hole in the center of the stage area for water to fall through.</li>
-				<li>Assembled the pool area - put the tubes through the holes</li>
+				<li>Assembled the pool area - put the tubes through the holes.</li>
 			</ul>
 			
 			2023-August-31
 			<ul>
-				<li>More research into 3D printing</li>
 				<li>Used Dremel to drill holes for tubes to feed through and for LED wires.</li>
 				<li>Double-checking to make sure center hole is the right distance away from the tube holes.</li>
+				<li>Prep for laser cutting next time.</li>
 			</ul>
 			
 			2023-August-29
@@ -189,6 +220,7 @@
 						<li>Possible "risks" include catching and retaining water on edges when we don't want it to.</li>
 					</ul>
 				</li>
+				<li>Tested seal with pump wires with water. No leakage at this time.</li>
 			</ul>
 			
 			2023-August-7
