Image renaming, website updates (BCY)

--- a/datasheets.html
+++ b/datasheets.html
@@ -51,6 +51,12 @@
 		<br />
 
         <div class="container">
+            <h2>Pinouts</h2>
+            <ul>
+                <li>16 & 17 (A2 & A3) = audio into the Teensy from the audio circuit</li>
+            </ul>
+            <p><br/></p>
+
             <h2>List of Datasheets</h2>
             The following list contains the datasheets to all parts used in the prototype and final product.
             <br/><br/>
