--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
 			<li><a href="#Features">Features</a></li>
 			<li><a href="#Progress">Progress (Pictures Only)</a>
 				<ul>
-					<li><a href="#Stage1">Stage 1</a>
-					<li><a href="#Stage2">Stage 2</a></li>
-					<li><a href="#Stage3">Stage 3</a></li>
+					<li><a href="#Stage1">Stage 1 - PCB design</a>
+					<li><a href="#Stage2">Stage 2 - Tray routing/cutting</a></li>
+					<li><a href="#Stage3">Stage 3 - Tray assembly</a></li>
+					<li><a href="#Stage4">Stage 4 - 3D design</a></li>
+					<li><a href="#Stage5">Stage 5 - 3D printing</a></li>
 				</ul>
 			</li>
 			<li><a href="#Prototype">Prototype</a></li>
@@ -87,10 +89,22 @@
 		<br/>
 
 		<h3 id="Progress">Progress (Pictures only)</h3>
+		<h4 id="Stage5"><u>Stage 5</u></h4>
+		<center>
+			<img src="images/testjoints.jpg" height="500px" style="margin: 20px" />
+			<img src="images/3DPoolCoverTest.jpg" height="500px" style="margin: 20px" />
+			<img src="images/Speaker3DPrintTestFit.jpg" height="500px" style="margin: 20px" />
+			<img src="images/PoolCoverStandPartialPrint.jpg" height="500px" style="margin: 20px" />
+		</center>
+		<h4 id="Stage4"><u>Stage 4</u></h4>
+		<center>
+		</center>
 		<h4 id="Stage3"><u>Stage 3</u></h4>
 		<center>
-			<img src="images/LEDStripLightTest.jpg" height="500px" style="margin: 20px" />
 			<img src="images/StagePreview.jpg" height="500px" style="margin: 20px" />
+			<img src="images/FullTrayMockAssembly.jpg" height="500px" style="margin: 20px" />
+			<img src="images/FullTrayMockAssemblyTop2.jpg" height="500px" style="margin: 20px" />
+			<img src="images/PoolMockAssembly.jpg" height="500px" style="margin: 20px" />
 		</center>
 		<h4 id="Stage2"><u>Stage 2</u></h4>
 		<center>
