--- a/meeting.html
+++ b/meeting.html
@@ -52,6 +52,11 @@
 
         <div class="container">
             <h2>Meetings</h2>
+			2023-October-19
+			<ul>
+				<li></li>
+			</ul>
+
 			2023-October-17
 			<ul>
 				<li>Check over fall break of the print revealed the print ran out of filament roughly halfway through.
@@ -62,7 +67,13 @@
 				</li>
 				<li>Cut out the remaining part of the pool cover and created gcode to print.</li>
 				<li>Began print of the remaining part of the pool cover.</li>
-				<li>Continuing to read analog input through the Teensy.</li>
+				<li>Continuing to read analog input through the Teensy.
+					<ul>
+						<li>Will need to clip the audio such that it doesn't read in all the random spikes.</li>
+					</ul>
+				</li>
+				<li>Updated website.</li>
+				<li>Continued fixing joint sizes.</li>
 			</ul>
 			
 			2023-October-5
@@ -76,8 +87,13 @@
 								<li>Initial test had the joint come out the same size for both sides of the joint.</li>
 							</ul>
 						</li>
-						<li>[] Reduce pin by 0.2mm.</li>
+						<li>[] Change pin size to: 4.5mm.
+							<ul>
+								<li>Intial print was a friction fit.</li>
+							</ul>
+						</li>
 						<li>[] Cut out holes for screws to speaker.</li>
+						<li>[] </li>
 					</ul>
 				</li>
 			</ul>
