--- a/expenses.html
+++ b/expenses.html
@@ -71,7 +71,7 @@
                     <tr>
                         <th>1</th>
                         <td>Water pumps + tubing (x4)</td>
-                        <td>B097F4576N</td>
+                        <td><a href="https://a.co/d/7k6CaST" target="_blank">B097F4576N</a></td>
                         <td>2023-Mar-17</td>
                         <td>Amazon</td>
                         <td>4</td>
@@ -148,7 +148,7 @@
                     <tr>
                         <th>8</th>
                         <td>Power supply</td>
-                        <td>B078RT3ZPS</td>
+                        <td><a href="https://a.co/d/iLvivoT" target="_blank">B078RT3ZPS</a></td>
                         <td>2023-May-06</td>
                         <td>Amazon</td>
                         <td>1</td>
@@ -268,7 +268,7 @@
 					</tr>
 					<tr>
                         <th>19</th>
-                        <td>electronic silicone</td>
+                        <td>Electronic silicone</td>
                         <td></td>
                         <td>2023-August-7</td>
                         <td></td>
