--- a/index.html
+++ b/index.html
@@ -61,32 +61,36 @@
 		<br/>
 
 		<h2>Project Info</h2>
-		<p>Quick Links</p>
-		<ul>
-			<li><a href="https://github.com/BYee7127/public_html.git" target="_blank">Github Repository</a></li>
-			<li><a href="#Features">Features</a></li>
-			<li><a href="#Progress">Progress (Pictures Only)</a>
-				<ul>
-					<li><a href="#Stage1">Stage 1 - PCB design</a>
-					<li><a href="#Stage2">Stage 2 - Tray routing/cutting</a></li>
-					<li><a href="#Stage3">Stage 3 - Tray assembly</a></li>
-					<li><a href="#Stage4">Stage 4 - 3D design</a></li>
-					<li><a href="#Stage5">Stage 5 - 3D printing</a></li>
-				</ul>
-			</li>
-			<li><a href="#Prototype">Prototype</a></li>
-			<li><a href="#FinalSketches">Final Product Sketches</a></li>
-		</ul>
-		<br/>
+		<div style="display: inline;">
+			<p>Quick Links</p>
+			<ul>
+				<li><a href="https://github.com/BYee7127/public_html.git" target="_blank">Github Repository</a></li>
+				<li><a href="#Features">Features</a></li>
+				<li><a href="#Progress">Progress (Pictures Only)</a>
+					<ul>
+						<li><a href="#Stage1">Stage 1 - PCB design</a>
+						<li><a href="#Stage2">Stage 2 - Tray routing/cutting</a></li>
+						<li><a href="#Stage3">Stage 3 - Tray assembly</a></li>
+						<li><a href="#Stage4">Stage 4 - 3D design</a></li>
+						<li><a href="#Stage5">Stage 5 - 3D printing</a></li>
+					</ul>
+				</li>
+				<li><a href="#Prototype">Prototype</a></li>
+				<li><a href="#FinalSketches">Final Product Sketches</a></li>
+			</ul>
+			<br/>
+		</div>
 
-		<h3 id="Features">Features</h3>
-		<ul>
-			<li>Mono audio.</li>
-			<li>LCD screen to show uploding progress (possible).</li>
-			<li>Pulsing LED around the edge.</li>
-			<li>Water stream just behind the LED strip to meet in the center.</li>
-		</ul>
-		<br/>
+		<div style="display: inline;">
+			<h3 id="Features">Features</h3>
+			<ul>
+				<li>Mono audio.</li>
+				<li>LCD screen to show uploding progress (possible).</li>
+				<li>Pulsing LED around the edge.</li>
+				<li>Water stream just behind the LED strip to meet in the center.</li>
+			</ul>
+			<br/>
+		</div>
 
 		<h3 id="Progress">Progress (Pictures only)</h3>
 		<h4 id="Stage5"><u>Stage 5</u></h4>
