Update website (BCY)

--- a/datasheets.html
+++ b/datasheets.html
@@ -59,11 +59,11 @@
             <ul>
                 <li>Pump driver -> Teensy
                     <ul>
-                        <li>Pump 01 -> pin 12</li>
-                        <li>Pump 02 -> pin 11</li>
-                        <li>Pump 03 -> pin 10</li>
-                        <li>Pump 04 -> pin 09</li>
-                        <li>Pump 05 -> pin 08</li>
+                        <li>Pump 01 -> pin 11</li>
+                        <li>Pump 02 -> pin 10</li>
+                        <li>Pump 03 -> pin 09</li>
+                        <li>Pump 04 -> pin 08</li>
+                        <li>Pump 05 -> pin 07</li>
                         <li>Pump 06 -> pin 06</li>
                         <li>Pump 07 -> pin 05</li>
                         <li>Pump 08 -> pin 04</li>
@@ -74,7 +74,13 @@
                     </ul>
                 </li>
                 <li>16 & 17 (A2 & A3) = audio into the Teensy from the audio circuit</li>
-                <li>#7 PWM pin for the LED</li>
+                <li>#20 PWM pin for the LED</li>
+            </ul>
+            <p><br/></p>
+
+            <ul>
+                <li><a href="https://youtu.be/wqt55OAabVs?si=8KcsKGALQ-EoyGBU&t=2097" target="_blank">Video explanation of FFT with Teensy</a></li>
+                <li><a href="https://forum.pjrc.com/index.php?threads/fft-on-teesy-4.60618/post-238045" target="_blank">Example basic FFT code.</a><br/></li>
             </ul>
             <p><br/></p>
 
