Updating LEDs to use counter

--- a/expenses.html
+++ b/expenses.html
@@ -332,10 +332,21 @@
                         <td>$36.02</td>
                         <td>Shipping and tax included.</td>
                     </tr>
+					<tr>
+                        <th>25</th>
+                        <td>RainX water repellent cleaner</td>
+                        <td>5144489</td>
+                        <td>2023-December-3</td>
+                        <td>Lowe's</td>
+                        <td>1</td>
+                        <td>$7.18</td>
+                        <td>$7.70</td>
+                        <td>Discount and tax included.</td>
+                    </tr>
                 </tbody>
                 <tr>
                     <th colspan="7" class="text-right">Total:</th>
-                    <td colspan="2">$522.96</td>
+                    <td colspan="2">$530.66</td>
                 </tr>
             </table>
             <p><br/></p>
